[package]
name = "annoy_roommates"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
b64 = "0.4.0"
rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
